making map not overflow

--- a/webgis_angular/src/app/app.component.html
+++ b/webgis_angular/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-map></app-map>
+<div class="map-container">
+    <app-map></app-map>
+    <a class="webgis-logo" routerLink="/">WebGIS</a>
+</div>
 <!-- Required by anular, do not remove -->
 <router-outlet />
