--- a/webgis_angular/src/styles.css
+++ b/webgis_angular/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* Prevents scrollbars */
+  }
+  
+  * {
+    box-sizing: border-box; /* Includes padding and border in the element's total width and height */
+  }
