adding clickable icon

--- a/webgis_angular/src/app/app.component.html
+++ b/webgis_angular/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="map-container">
     <app-map></app-map>
-    <a class="webgis-logo" routerLink="/">WebGIS</a>
+    <a href="/" class="logo-container" title="WebGIS">
+        <img src="webgis_icon.svg" alt="Logo" />
+    </a>
 </div>
 <!-- Required by anular, do not remove -->
 <router-outlet />
