adding legend to main portal

--- a/webgis_angular/src/app/app.component.html
+++ b/webgis_angular/src/app/app.component.html
@@ -1,8 +1,12 @@
 <div class="map-container">
+    <!-- Map Component -->
     <app-map></app-map>
+    <!-- Map Legend Component -->
+    <app-map-legend class="map-legend"></app-map-legend> 
+       
     <a href="/" class="logo-container" title="WebGIS">
         <img src="webgis_icon.svg" alt="Logo" />
     </a>
 </div>
-<!-- Required by anular, do not remove -->
+<!-- Required by angular, do not remove -->
 <router-outlet />
