rotate and adjust toggle legend button

--- a/webgis_angular/src/app/map-legend/map-legend.component.html
+++ b/webgis_angular/src/app/map-legend/map-legend.component.html
@@ -1,5 +1,5 @@
 <!-- Toggle Button -->
-<button (click)="toggleLegend()">Toggle Legend</button>
+<button (click)="toggleLegend()">Legend</button>
 
 <!-- Legend Panel -->
 <div class="map-legend" [class.expanded]="isExpanded">
