--- a/webgis_angular/src/app/map-legend/map-legend.component.css
+++ b/webgis_angular/src/app/map-legend/map-legend.component.css
@@ -15,6 +15,9 @@
   }
   
   button {
+    transform: rotate(90deg);
+    transform-origin: right top;
+    display: inline-block;    
     position: fixed;
     right: 0;
     top: 50%;
