add map service for layer

--- a/webgis_angular/src/app/map-legend-item/map-legend-item.component.html
+++ b/webgis_angular/src/app/map-legend-item/map-legend-item.component.html
@@ -1,1 +1,2 @@
-<p>map-legend-item works!</p>
+<button (click)="onSwitchStyle('styles/osm.json')">OSM Style</button>
+<button (click)="onSwitchStyle('https://demotiles.maplibre.org/style.json')">Another Style</button>
