more legend changes

--- a/webgis_angular/src/app/map-legend/map-legend.component.html
+++ b/webgis_angular/src/app/map-legend/map-legend.component.html
@@ -3,6 +3,6 @@
 
 <!-- Legend Panel -->
 <div class="map-legend" [class.expanded]="isExpanded">
-  <p>map-legend works!</p>
+  <app-map-legend-item></app-map-legend-item>
   <!-- Legend items here -->
 </div>
