adding a component only for basemaps and generalising its input

--- a/webgis_angular/src/app/map-legend-item/map-legend-item.component.html
+++ b/webgis_angular/src/app/map-legend-item/map-legend-item.component.html
@@ -1,2 +1,1 @@
-<button (click)="onSwitchStyle('styles/osm.json')">OSM Style</button>
-<button (click)="onSwitchStyle('https://demotiles.maplibre.org/style.json')">Another Style</button>
+<p>map-legend-basemap works!</p>
