adding google site

--- a/webgis_angular/src/app/map-legend/map-legend.component.html
+++ b/webgis_angular/src/app/map-legend/map-legend.component.html
@@ -4,5 +4,5 @@
 <!-- Legend Panel -->
 <div class="map-legend" [class.expanded]="isExpanded">
   <app-map-legend-basemap [styleUrl]="'styles/osm.json'" [styleName]="'OSM Style'"></app-map-legend-basemap>
-  <app-map-legend-basemap [styleUrl]="'https://demotiles.maplibre.org/style.json'" [styleName]="'Another Style'"></app-map-legend-basemap>
+  <app-map-legend-basemap [styleUrl]="'styles/google_sat.json'" [styleName]="'Google Sat Style'"></app-map-legend-basemap>
 </div>
